Fixed the flickering when zoomed on phones

--- a/src/CSS/Background.css
+++ b/src/CSS/Background.css
@@ -8,12 +8,21 @@
     overflow: hidden;
     position: absolute;
     z-index: -1;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transform-style: preserve-3d;
+    transform: translate3d(0,0,0);
+    transform-style: preserve-3d;
+    -webkit-perspective: 1000;
 }
 
 
 @keyframes background-animate {
     from{
         transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+
     }
     0% {
         background-color: #7E57C2;
@@ -21,6 +30,8 @@
     }
     50% {
         transform: scale(0.5) rotate(180deg);
+        -webkit-transform: scale(0.5) rotate(180deg);
+    
         background-color: #4da0f3;
         border-radius: 30% 70% 33% 67% / 32% 38% 62% 68%  ;    
     }
@@ -30,6 +41,7 @@
     }
     to{
         transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
     }
   }
 
@@ -39,14 +51,17 @@
 @keyframes background-animate2 {
     from{
         transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+
     }
     0% {
         background-color: #7E57C2;
-    border-radius: 70% 30% 44% 56% / 39% 30% 70% 61% ;
+        border-radius: 70% 30% 44% 56% / 39% 30% 70% 61% ;
     }
     50% {
         background-color: #1976D2;
         transform: scale(2) rotate(180deg);
+        -webkit-transform: scale(2) rotate(180deg);
         border-radius: 30% 70% 33% 67% / 32% 38% 62% 68%  ;    
     }
     100%{
@@ -55,13 +70,19 @@
     }
     to{
         transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+
     }
   }
 
 .background::after{
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-
+    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transform-style: preserve-3d;
+    transform: translate3d(0,0,0);
+    transform-style: preserve-3d;
+    -webkit-perspective: 1000;
     top: 10%;
     left: 40%;
     overflow: hidden;
@@ -71,7 +92,7 @@
     opacity: 0.5;
     text-align: center;
     line-height: 100%;
-    z-index: -3;
+    z-index: -1;
     width: 70%;
     height: 80%;
     min-height: 500px;
@@ -80,18 +101,24 @@
    
     -webkit-animation:infinite;
     -webkit-animation-duration: 20s;
-    -webkit-animation-timing-function:linear;
+    -webkit-animation-timing-function:ease-out;
     -webkit-animation-name: background-animate2 ;
 
     animation:infinite;
     animation-duration: 20s;
-    animation-timing-function:linear;
+    animation-timing-function:ease-out;
     animation-name: background-animate2 ;
   }
 
   .background::before{
+    -webkit-perspective: 1000;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transform-style: preserve-3d;
+    transform: translate3d(0,0,0);
+    transform-style: preserve-3d;
+    animation-delay: 0s;
 
     border-radius: 70% 30% 44% 56% / 39% 30% 70% 61% ;
     top: -10%;
@@ -108,16 +135,16 @@
     height: 80%;
     min-height: 500px;
     min-width: 400px;
-    z-index: -3;
+    z-index: -1;
 
     -webkit-animation:infinite;
     -webkit-animation-duration: 30s;
-    -webkit-animation-timing-function:linear;
+    -webkit-animation-timing-function:ease-out;
     -webkit-animation-name: background-animate ;
 
     animation:infinite;
     animation-duration: 30s;
-    animation-timing-function:linear;
+    animation-timing-function:ease-out;
     animation-name: background-animate ;
   }
 
